src/objects/BMCServiceDesk__BMC_UPS__c.object
<CustomObject>
    <description>BMC_UPS. CMDB Class that stores information about uninterruptible power supply (UPS) systems, which maintain power for your organization and its systems during power outages. This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__Battery_Installed__c</fullName>
        <label>Battery Installed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Input_Voltage__c</fullName>
        <label>Input Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range 1</fullName>
                </value>
                <value>
                    <fullName>Range 2</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Switching_Supply__c</fullName>
        <label>Is Switching Supply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Time_On_Backup__c</fullName>
        <label>Time On Backup</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Total_Output_Power__c</fullName>
        <label>Total Output Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type_Of_Range_Switching__c</fullName>
        <label>Type Of Range Switching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Autoswitch</fullName>
                </value>
                <value>
                    <fullName>Wide Range</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UPS_Port__c</fullName>
        <label>UPS Port</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>UPS</label>
    <nameField>
        <label>UPS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>